# kfj_OpenGL_notes

./: CMakeLists.txt  Doxyfile_kfj  readme.md  setup-env.sh
inc/: SOIL.h  Shader.hpp  common.hpp
lib/: libSOIL.dylib
notes/: hello_triangle.md
src/: 1_hello_world.cpp  2_hello_circle.cpp  2_hello_triangle.cpp  2_hello_triangle_with_element_buffer.cpp  2_hello_trianlge.cpp  2_hello_two_triangles.cpp  2_hello_two_triangles_2.cpp  2_hello_two_triangles_2_with_different_color.cpp  3_hello_texure.cpp  3_hello_triangle_color.cpp  3_hello_triangle_uniform.cpp  4_hello_texture.cpp  4_hello_texure.cpp  5_test_GLM.cpp  Shader.cpp  common.cpp  main.cpp  printsysteminfo.cpp  util.cpp
src/exercises/: glm_ex01.cpp  hello-shaders-ex01.cpp  hello-shaders-ex02.cpp  hello-triangle-ex01-01.cpp  hello-triangle-ex01.cpp  hello-triangle-ex02.cpp  hello-triangle-ex03.cpp  readme.md  texture-ex.cpp
src/shaders/: 2_hello_triangle_fragment_shader_yellow.txt  2_hello_triangle_vertex_shader.txt  3_hello_triangle_fragment_shader_color.txt  3_hello_triangle_fragment_shader_with_uniform_variable.txt  3_hello_triangle_vertex_shader_color.txt  4_hello_texture_fragment_shader.txt  4_hello_texture_vertex_shader.txt
